# modern_robotics

./: CMakeLists.txt  README.md  setup.py
include/MR_Indy7/: MR_Indy7.h
modern_robotics.egg-info/: PKG-INFO  SOURCES.txt
src/: main.cpp
tests/: Indy7.py  numpy_arrays101.json  numpy_arrays103.json  numpy_arrays105.json  numpy_arrays107.json  numpy_arrays109.json  numpy_arrays111.json  numpy_arrays113.json  numpy_arrays115.json  numpy_arrays117.json  numpy_arrays119.json  numpy_arrays12.json  numpy_arrays120.json  numpy_arrays121.json  numpy_arrays123.json  numpy_arrays125.json  numpy_arrays127.json  numpy_arrays129.json  numpy_arrays131.json  numpy_arrays133.json  numpy_arrays135.json  numpy_arrays137.json  numpy_arrays139.json  numpy_arrays14.json  numpy_arrays140.json  numpy_arrays141.json  numpy_arrays142.json  numpy_arrays143.json  numpy_arrays144.json  numpy_arrays145.json  numpy_arrays146.json  numpy_arrays147.json  numpy_arrays148.json  numpy_arrays149.json  numpy_arrays15.json  numpy_arrays150.json  numpy_arrays152.json  numpy_arrays154.json  numpy_arrays156.json  numpy_arrays158.json  (+74 more)
